@@ -1,6 +1,8 @@
 package com.capstone.notechigima.service;
 
+import com.capstone.notechigima.config.ExceptionCode;
 import com.capstone.notechigima.domain.study_group.StudyGroup;
+import com.capstone.notechigima.dto.study_group.StudyGroupWithSubjectsGetResponseDTO;
 import com.capstone.notechigima.dto.subject.SubjectGetResponseDTO;
 import com.capstone.notechigima.dto.subject.SubjectPostRequestDTO;
 import com.capstone.notechigima.mapper.SubjectMapper;
@@ -10,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
 @Service
@@ -19,11 +22,19 @@ public class SubjectService {
     private final GroupRepository groupRepository;
     private final SubjectRepository subjectRepository;
 
-    public List<SubjectGetResponseDTO> getSubjectsByGroupId(int groupId) {
-        return subjectRepository.findAllByStudyGroup_GroupId(groupId)
+    public StudyGroupWithSubjectsGetResponseDTO getSubjectsByGroupIdWithGroup(int groupId) {
+        StudyGroup studyGroup = groupRepository.findById(groupId)
+                .orElseThrow(() -> new NoSuchElementException(ExceptionCode.ERROR_NOT_FOUND_RESOURCE.getMessage()));
+
+        List<SubjectGetResponseDTO> subjects = subjectRepository.findAllByStudyGroup_GroupId(groupId)
                 .stream()
-                .map(entity -> SubjectMapper.INSTANCE.toSubjectGetResponseDTO(entity))
-                .collect(Collectors.toList());
+                .map(SubjectMapper.INSTANCE::toSubjectGetResponseDTO).toList();
+
+        return StudyGroupWithSubjectsGetResponseDTO.builder()
+                .groupId(groupId)
+                .groupName(studyGroup.getName())
+                .subjects(subjects)
+                .build();
     }
 
     public void postSubject(SubjectPostRequestDTO body) {
